--- a/index.html
+++ b/index.html
@@ -19,28 +19,34 @@
                 </div>
                 <div class="slide">
                     <img src="./assets/image3.jpeg" alt="Image 3">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image4.jpeg" alt="Image 4">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image5.jpeg" alt="Image 5">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image6.jpeg" alt="Image 6">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image7.jpeg" alt="Image 7">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image8.jpeg" alt="Image 8">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image9.jpeg" alt="Image 9">
-                </div><div class="slide">
+                </div>
+                <div class="slide">
                     <img src="./assets/image10.jpeg" alt="Image 10">
                 </div>
-                </div><div class="slide">
+                <div class="slide">
                     <img src="./assets/image11.jpeg" alt="Image 11">
                 </div>
             </div>
-            <button type="button" class="material-symbols-outlined">arrow_back_ios</button>
-            <button type="button" class="material-symbols-outlined">arrow_forward_ios</button>
-
+        <button id="back" type="button" class="material-symbols-outlined">arrow_back_ios_new</button>
+        <button id="next" type="button" class="material-symbols-outlined">arrow_forward_ios</button>
         </div>
     </div>
     <script src="./script.js"></script>
