Final image carousel

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <div class="container">
         <div class="carousel">
+            <h2>CRISTIANO RONALDO dos SANTOS AVEIRO GOIH ComM</h2>
+            <h4>The "GOAT"</h4>
             <div class="carousel-slides">
                 <div class="slide">
                     <img src="./assets/img1.jpeg" alt="Image 1">
+                    <p>Cristiano Ronaldo at Real Madrid in 2017.</p>
                 </div>
                 <div class="slide">
                     <img src="./assets/image2.jpeg" alt="Image 2">
@@ -25,28 +28,37 @@
                 </div>
                 <div class="slide">
                     <img src="./assets/image5.jpeg" alt="Image 5">
+                    <p>Cristiano Ronaldo back at Manchester in 2021.</p>
                 </div>
                 <div class="slide">
                     <img src="./assets/image6.jpeg" alt="Image 6">
                 </div>
                 <div class="slide">
                     <img src="./assets/image7.jpeg" alt="Image 7">
+                    <p>Cristiano Ronaldo joining Al-Nassr in 2023.</p>
                 </div>
                 <div class="slide">
                     <img src="./assets/image8.jpeg" alt="Image 8">
+                    <p>Cristiano Ronaldo wins the Balon d'Or in 2017.</p>
                 </div>
                 <div class="slide">
                     <img src="./assets/image9.jpeg" alt="Image 9">
+                    <p>Cristiano Ronaldo in his final days of football career.</p>
                 </div>
                 <div class="slide">
                     <img src="./assets/image10.jpeg" alt="Image 10">
+                    <p>Retiring Cristiano Ronaldo reminiscing his goated extraordinary career.</p>
                 </div>
                 <div class="slide">
                     <img src="./assets/image11.jpeg" alt="Image 11">
+                    <p>The GOAT enjoying peaceful and fulfilling retirement.</p>
                 </div>
             </div>
-        <button id="back" type="button" class="material-symbols-outlined">arrow_back_ios_new</button>
-        <button id="next" type="button" class="material-symbols-outlined">arrow_forward_ios</button>
+        <button id="back" type="button" class="material-symbols-outlined direction">arrow_back_ios_new</button>
+        <button id="next" type="button" class="material-symbols-outlined direction">arrow_forward_ios</button>
+        <div class="carousel-dots">
+            <!--dots will be added here-->
+        </div>
         </div>
     </div>
     <script src="./script.js"></script>
